--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/baseMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/baseMain"
+    android:background="@color/category_play"
     android:orientation="vertical"
-    android:background="@color/tan_background"
     tools:context=".MainActivity">
 
-    <TextView
-        style="@style/category_style"
-        android:id="@+id/play"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Play"
-        android:background="@color/category_play"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        style="@style/category_style"
-        android:id="@+id/playlist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Playlist"
-        android:background="@color/category_playlist"
-        />
-    <TextView
-        style="@style/category_style"
-        android:id="@+id/favoriteslist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Favorites"
-        android:background="@color/category_favorites"
-        />
+        <TextView
+            android:id="@+id/play"
+            style="@style/category_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/category_play"
+            android:text="@string/play" />
+
+        <TextView
+            android:id="@+id/playlist"
+            style="@style/category_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/category_playlist"
+            android:text="@string/playlist" />
+
+        <TextView
+            android:id="@+id/favoriteslist"
+            style="@style/category_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/category_favorites"
+            android:text="@string/favorites" />
 
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/now_playing"
+                style="@style/category_now_playing_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/now_playing" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:contentDescription="@string/image_of_an_old_camera"
+                    app:srcCompat="@drawable/photo1" />
+
+                <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/name_Song"
+                        style="@style/group_name_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/beside_canada"
+                        android:textAlignment="center"
+                        android:textAllCaps="true" />
+
+                    <TextView
+                        android:id="@+id/song_name1"
+                        style="song_name_style"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_marginLeft="16dp"
+                        android:contentDescription="@string/name_of_band"
+                        android:text="@string/mumble_of_galore"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/rew"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/text_large_body"
+                    android:contentDescription="@string/rewind_button"
+                    app:srcCompat="@drawable/ic_frw" />
+
+                <ImageView
+                    android:id="@+id/play_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/text_large_body"
+                    android:contentDescription="@string/play_button"
+                    app:srcCompat="@drawable/ic_circle_play" />
+
+                <ImageView
+                    android:id="@+id/ffd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/text_large_body"
+                    android:contentDescription="@string/fast_forward"
+                    app:srcCompat="@drawable/ic_ff" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
